# NetworkManager

./: .gitignore  configure.ac  rh901662-bond-more-options.patch
callouts/: nm-avahi-autoipd-action.c  nm-dispatcher-api.h  nm-dispatcher-utils.c  nm-dispatcher.c
include/: NetworkManager.h  nm-glib-compat.h  nm-test-utils.h
introspection/: all.xml.in  nm-device-wifi.xml  nm-device.xml  nm-manager.xml  nm-settings-connection.xml
libnm-core/: Makefile.libnm-core  nm-connection.c  nm-core-internal.h  nm-dbus-interface.h  nm-dbus-utils.c  nm-dbus-utils.h  nm-setting-8021x.c  nm-setting-bond.c  nm-setting-bridge.c  nm-setting-connection.c  nm-setting-private.h  nm-setting-team.c  nm-setting-vlan.c  nm-setting-wireless.c  nm-setting.c  nm-setting.h  nm-utils.c  nm-utils.h
libnm-glib/: libnm-glib-test.c  libnm-glib.ver  libnm_glib.c  nm-client.c  nm-device.c  nm-device.h  nm-vpn-plugin.c
libnm-util/: Makefile.am  libnm-util.ver  nm-connection.c  nm-connection.h  nm-param-spec-specialized.c  nm-setting-8021x.c  nm-setting-adsl.c  nm-setting-bluetooth.c  nm-setting-bond.c  nm-setting-bond.h  nm-setting-bridge-port.c  nm-setting-bridge.c  nm-setting-cdma.c  nm-setting-connection.c  nm-setting-dcb.c  nm-setting-generic.c  nm-setting-gsm.c  nm-setting-infiniband.c  nm-setting-ip4-config.c  nm-setting-ip6-config.c  nm-setting-olpc-mesh.c  nm-setting-ppp.c  nm-setting-pppoe.c  nm-setting-serial.c  nm-setting-team-port.c  (+16 more)
src/: Makefile.am  NetworkManagerUtils.c  NetworkManagerUtils.h  main-utils.c  main-utils.h  main.c  nm-activation-request.c  nm-activation-request.h  nm-active-connection.c  nm-active-connection.h  nm-auth-subject.c  nm-auth-subject.h  nm-config-data.c  nm-config-data.h  nm-config.c  nm-config.h  nm-connectivity.c  nm-connectivity.h  nm-dbus-manager.c  nm-dbus-manager.h  nm-device.c  nm-dhcp4-config.c  nm-dhcp6-config.c  nm-dispatcher.c  nm-iface-helper.c  nm-ip4-config.c  nm-ip6-config.c  nm-manager-auth.c  nm-manager-auth.h  nm-manager.c  nm-manager.h  nm-object.c  nm-object.h  nm-policy.c  nm-properties-changed-signal.c  nm-properties-changed-signal.h  nm-route-manager.c  nm-session-monitor.c  nm-session-monitor.h  nm-sleep-monitor-upower.c  (+1 more)
src/config/tests/: test-config.c
src/devices/: nm-device-adsl.c  nm-device-bond.c  nm-device-bridge.c  nm-device-bt.c  nm-device-ethernet.c  nm-device-factory.c  nm-device-factory.h  nm-device-generic.c  nm-device-generic.h  nm-device-gre.c  nm-device-infiniband.c  nm-device-macvlan.c  nm-device-olpc-mesh.c  nm-device-private.h  nm-device-team.c  nm-device-tun.c  nm-device-veth.c  nm-device-vlan.c  nm-device-vlan.h  nm-device-vxlan.c  nm-device-wifi.c  nm-device.c  nm-device.h
src/devices/adsl/: Makefile.am  nm-atm-manager.c  nm-device-adsl.c
src/devices/atm/: nm-device-adsl.c
src/devices/bluetooth/: Makefile.am  nm-bluez-manager.c  nm-bluez4-adapter.c  nm-bluez4-manager.c  nm-device-bt.c
src/devices/team/: Makefile.am  nm-device-team.c  nm-device-team.h  nm-team-factory.c
src/devices/wifi/: Makefile.am  nm-device-olpc-mesh.c  nm-device-olpc-mesh.h  nm-device-wifi.c  nm-device-wifi.h  nm-wifi-ap.c  nm-wifi-factory.c
src/devices/wifi/tests/: Makefile.am  test-wifi-ap-utils.c
src/devices/wimax/: Makefile.am  nm-device-wimax.c  nm-device-wimax.h  nm-wimax-factory.c  nm-wimax-nsp.c
src/devices/wwan/: Makefile.am  nm-device-modem.c  nm-modem.c  nm-wwan-factory.c
src/dhcp-manager/: nm-dhcp-client.c  nm-dhcp-client.h  nm-dhcp-dhclient-utils.c  nm-dhcp-dhclient.c  nm-dhcp-dhcpcd.c  nm-dhcp-manager.c  nm-dhcp-systemd.c  nm-dhcp-utils.c  nm-dhcp-utils.h
src/dhcp-manager/systemd-dhcp/: nm-sd-adapt.h
src/dhcp-manager/systemd-dhcp/src/libsystemd-network/: network-internal.c  sd-dhcp-client.c  sd-dhcp-lease.c  sd-dhcp6-client.c  sd-dhcp6-lease.c
src/dhcp-manager/systemd-dhcp/src/shared/: log.h  macro.h  path-util.c  strv.c  utf8.c  util.c  util.h
src/dhcp-manager/systemd-dhcp/src/systemd/: sd-dhcp6-client.h
src/dhcp-manager/tests/: test-dhcp-dhclient.c
src/dns-manager/: nm-dns-plugin.c
src/dnsmasq-manager/: nm-dnsmasq-manager.c
src/dnsmasq-manager/tests/: test-dnsmasq-utils.c
src/firewall-manager/: nm-firewall-manager.c
src/logging/: nm-logging.c  nm-logging.h
src/modem-manager/: nm-modem-broadband.c  nm-modem-old.c  nm-modem.c
src/platform/: nm-fake-platform.c  nm-linux-platform.c  nm-platform.c  nm-platform.h
src/platform/tests/: .gitignore  Makefile.am  dump.c  monitor.c  platform.c  test-address.c  test-cleanup.c  test-common.c  test-general.c  test-link.c  test-route.c
src/platform/wifi/: wifi-utils-nl80211.c  wifi-utils-wext.c  wifi-utils.c  wifi-utils.h
src/ppp-manager/: nm-ppp-manager.c  nm-pppd-plugin.c
src/rdisc/: nm-rdisc.c  nm-rdisc.h
src/rdisc/tests/: rdisc.c
src/settings/: nm-agent-manager.c  nm-agent-manager.h  nm-secret-agent.c  nm-secret-agent.h  nm-settings-connection.c  nm-settings-connection.h  nm-settings.c  nm-settings.h  nm-system-config-interface.h
src/settings/plugins/example/: Makefile.am  nm-example-connection.c
src/settings/plugins/ifcfg-rh/: Makefile.am  nm-ifcfg-connection.c  nm-ifcfg-rh.xml  plugin.c  reader.c  utils.h  writer.c
src/settings/plugins/ifcfg-rh/tests/: test-ifcfg-rh.c
src/settings/plugins/ifcfg-rh/tests/network-scripts/: Makefile.am
src/settings/plugins/ifnet/: plugin.c
src/settings/plugins/ifupdown/: plugin.c
src/settings/plugins/ifupdown/tests/: test-ifupdown.c
src/settings/plugins/keyfile/: Makefile.am  nm-keyfile-connection.c  plugin.c  reader.c  utils.h  writer.c
src/settings/plugins/keyfile/tests/: Makefile.am
src/settings/tests/: test-wired-defname.c
src/supplicant-manager/: nm-supplicant-config.c  nm-supplicant-config.h  nm-supplicant-interface.c  nm-supplicant-interface.h  nm-supplicant-manager.c
src/supplicant-manager/tests/: Makefile.am  test-supplicant-config.c
src/tests/: Makefile.am  test-dcb.c  test-general.c  test-ip4-config.c  test-ip6-config.c  test-resolvconf-capture.c  test-route-manager.c
src/tests/config/: Makefile.am  test-config.c
src/vpn-manager/: nm-vpn-connection.c  nm-vpn-manager.c
(+57 files in other folders)
